# resume-ollama-be

./: .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 4dfd12cfc866_initial_database_schema_with_cv_models_.py  6572d21bb15f_change_hashed_fields_to_plain_text.py  fb6d9f893224_add_cvprocessingjob_table.py
app/: main.py
app/api/: cv_router.py
app/core/: database.py
app/models/: cv_models.py
app/schemas/: cv_schemas.py
app/services/: database_service.py  embedding_service.py  matching_service.py  ollama_service.py  pdf_service.py
docs/: MVP.md  backend-api-documentation.md  frontend-api-guide.md
