[project]
name = "cv-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "ollama>=0.5.3",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]
